--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,8 @@
           </div>
           <p class="mat-body-2">
             Cable Haunt is a critical vulnerability found in cable modems from various manufacturers across the world.
-            The vulnerability enables remote attackers to execute abitrary code on your modem, indirectly through an endpoint on
+            The vulnerability enables remote attackers to execute abitrary code on your modem, indirectly through an
+            endpoint on
             the modem. Your cable modem is in charge of the internet traffic for all devices on the network. Cable Haunt
             might therefore be exploited to intercept private messages, redirect traffic, or participation in botnets.
           </p>
@@ -85,19 +86,35 @@
             <mat-card fxLayout="column">
               <mat-card-title>Test Script</mat-card-title>
               <mat-card-content>
-                <p>We have developed a script that tests whether your modem is vulnerable. You could still be vulnerable even if the script fails. We recommend reading the <a style="color: rgb(0, 0, 220); cursor: pointer;" (click)="scrollToAndExpand('faq-am-i-affected', 0)">"Am I Affected?"-FAQ</a>.</p>
+                <p>We have developed a script that tests whether your modem is vulnerable. You could still be vulnerable
+                  even if the script fails. We recommend reading the <a style="color: rgb(0, 0, 220); cursor: pointer;"
+                    (click)="scrollToAndExpand('faq-am-i-affected', 0)">"Am I Affected?"-FAQ</a>.</p>
               </mat-card-content>
               <mat-card-actions>
-                <a id="test-script-repo-button" target="_blank" href="https://github.com/Lyrebirds/cable-haunt-vulnerability-test" mat-raised-button color="primary">View Script</a>
+                <a id="test-script-repo-button" target="_blank"
+                  href="https://github.com/Lyrebirds/cable-haunt-vulnerability-test" mat-raised-button
+                  color="primary">View Script</a>
               </mat-card-actions>
             </mat-card>
           </div>
           <div class="mat-title">Who is Affected</div>
           <p class="mat-body-2">
-            There are an estimated 200 million cable modems in Europe alone. With almost no cable modem tested being secure without a firmware update, the number of modems initially vulnerable in Europe is estimated to be close to this number. However, it is tough to give a precise estimate of the reach of Cable Haunt. The reason for this is that the vulnerability originated in reference software, which has seemingly been copied by different cable modems manufacturers when creating their cable modem firmware. This means that we have not been able to track the exact spread of the vulnerability and that it might present itself in slightly different ways for different manufacturers. We have contacted as many of the largest ISPs and manufacturers as we could ahead of time, to give them time to fix the issue, but with varying success. Some of the contacted ISPs have informed us that they have or are rolling out firmware updates; however, we are still missing updates form several, and some have whished not to be listed on this website. The ISPs that have confirmed their modems are secure can be found <a (click)="scrollToAndExpand('faq-am-i-affected', 0)">below</a>.
+            There are an estimated 200 million cable modems in Europe alone. With almost no cable modem tested being
+            secure without a firmware update, the number of modems initially vulnerable in Europe is estimated to be
+            close to this number. However, it is tough to give a precise estimate of the reach of Cable Haunt. The
+            reason for this is that the vulnerability originated in reference software, which has seemingly been copied
+            by different cable modems manufacturers when creating their cable modem firmware. This means that we have
+            not been able to track the exact spread of the vulnerability and that it might present itself in slightly
+            different ways for different manufacturers. We have contacted as many of the largest ISPs and manufacturers
+            as we could ahead of time, to give them time to fix the issue, but with varying success. Some of the
+            contacted ISPs have informed us that they have or are rolling out firmware updates; however, we are still
+            missing updates form several, and some have whished not to be listed on this website. The ISPs that have
+            confirmed their modems are secure can be found <a
+              (click)="scrollToAndExpand('faq-am-i-affected', 0)">below</a>.
           </p>
           <p class="mat-body-2">
-            The purpose of this website, is to inform as many affected users and providers as possible, in order to improve their ability to protect themselves.
+            The purpose of this website, is to inform as many affected users and providers as possible, in order to
+            improve their ability to protect themselves.
           </p>
           <div class="mat-title">Who Discovered Cable Haunt</div>
           <div class="mat-body-2">
@@ -187,6 +204,8 @@
                   <mat-list-item> Stofa - Denmark </mat-list-item>
                   <mat-list-item> Get AS - Norway</mat-list-item>
                   <mat-list-item> Telia Norway </mat-list-item>
+                  <mat-list-item> Com Hem / Tele2 - Sweden (Patch being deployed. Power cycles will update vulnerable
+                    modems.) </mat-list-item>
                 </mat-list>
               </mat-expansion-panel>
             </p>
@@ -197,11 +216,16 @@
               would inform us at <a href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>
             </p>
             <p class="mat-body-2">
-              If your modem is not supplied by your ISP, or you want to check for yourself, you can check if your modem is in the lists of vulnerable modems below. This will require you to know your modems model and firmware version which can typically be found in the configuration user interface of the modem, running on
-              the default gateway. Later, we will also describe how to manually test your modem and add it to the lists. Several modems have already been confirmed to
-              be vulnerable and we are keeping lists updated as we recieve information. We appreciate all the help we can get and have already received. If you want to help us, we
-              thank you, and ask that you please read this and the <a (click)="scrollToAndExpand('faq-how-can-i-help', 4)">"What Should I Do?"-FAQ</a> below and contact us at <a
-                href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>.
+              If your modem is not supplied by your ISP, or you want to check for yourself, you can check if your modem
+              is in the lists of vulnerable modems below. This will require you to know your modems model and firmware
+              version which can typically be found in the configuration user interface of the modem, running on
+              the default gateway. Later, we will also describe how to manually test your modem and add it to the lists.
+              Several modems have already been confirmed to
+              be vulnerable and we are keeping lists updated as we recieve information. We appreciate all the help we
+              can get and have already received. If you want to help us, we
+              thank you, and ask that you please read this and the <a
+                (click)="scrollToAndExpand('faq-how-can-i-help', 4)">"What Should I Do?"-FAQ</a> below and contact us at
+              <a href="mailto:cablehaunt@lyrebirds.dk">cablehaunt@lyrebirds.dk</a>.
             </p>
             <div id="faq-vulnerable-modems-sub" class="mat-title">
               Vulnerable Modems
@@ -210,7 +234,8 @@
               In the lists, the firmware version is the latest firmware that have been confirmed to be vulnerable.
               The port is the port on the local network where the spectrum analyser is running.
               If the spectrum analyser requires credentials, they are also provided together with the authentication
-              type used. Some of the vulerable modems have only been confirmed by third parties, and modems can therefore occur multiple
+              type used. Some of the vulerable modems have only been confirmed by third parties, and modems can
+              therefore occur multiple
               times with different firmware and have missing information.
             </p>
             <p class="mat-body-2">
@@ -266,8 +291,10 @@
             </p>
             <p class="mat-body-2">
               The report contains the full exploit and all technical details needed to replicate, understand and test
-              for the vulnerability. However, we have also developed a tool to check whether your modem is vulnerable, which can
-              be found <a target="_blank" (click)="scrollToCenter('test-script-repo-button')">above</a>. <b>ONLY RUN THIS TEST ON EQUIPMENT YOU OWN</b>.
+              for the vulnerability. However, we have also developed a tool to check whether your modem is vulnerable,
+              which can
+              be found <a target="_blank" (click)="scrollToCenter('test-script-repo-button')">above</a>. <b>ONLY RUN
+                THIS TEST ON EQUIPMENT YOU OWN</b>.
               The script automatically scans your network to find the spectrum analyser and tries to establish
               connection to the websocket. The script will test if the modem rejects requests from an external origin,
               by setting the header parameters similar to how a browser or other modern client would. If the
@@ -288,9 +315,14 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
-              It is very hard to detect whether your cable modem has already been exploited since Cable Haunt can be exploited
-              for full control and a skilled person could therefore thoroughly cover their tracks. However, even though the vulnerability allows arbitrary code to be executed, it 
-              requires a lot of work from the attacker to find the needed commands and craft the package, for exploiting full control. For your average Joe, as long as "easy-to-use" exploit packages for specific modems have not been crafted, they are not the target. Which is one of the reasons for this website and why it is important Cable Haunt is fixed quickly.
+              It is very hard to detect whether your cable modem has already been exploited since Cable Haunt can be
+              exploited
+              for full control and a skilled person could therefore thoroughly cover their tracks. However, even though
+              the vulnerability allows arbitrary code to be executed, it
+              requires a lot of work from the attacker to find the needed commands and craft the package, for exploiting
+              full control. For your average Joe, as long as "easy-to-use" exploit packages for specific modems have not
+              been crafted, they are not the target. Which is one of the reasons for this website and why it is
+              important Cable Haunt is fixed quickly.
             </p>
           </mat-expansion-panel>
           <mat-expansion-panel [(expanded)]="expanded[2]">
@@ -492,28 +524,47 @@
               </mat-panel-title>
             </mat-expansion-panel-header>
             <p class="mat-body-2">
-              Perhaps not. This is not heartbleed, EternalBlue, Meltdown or Row Hammer, and we have no illusions about this. And yes, Samuel Gross' recent publication of a vulnerability in iMessage much more technically interesting than a buffer overflow in cable modems. While exploitation, websockets aversion to CORS and SOP and creating ROP-chains in MIPS architecture, is interesting it is clear that it is the scale, and its spread across different manufacturers, that gives this vulnerability public significance.
+              Perhaps not. This is not heartbleed, EternalBlue, Meltdown or Row Hammer, and we have no illusions about
+              this. And yes, Samuel Gross' recent publication of a vulnerability in iMessage much more technically
+              interesting than a buffer overflow in cable modems. While exploitation, websockets aversion to CORS and
+              SOP and creating ROP-chains in MIPS architecture, is interesting it is clear that it is the scale, and its
+              spread across different manufacturers, that gives this vulnerability public significance.
             </p>
             <div class="mat-title">
               So Why Did You Brand It Anyway?
             </div>
             <p class="mat-body-2">
-              The vulnerability was found across 4 different vendors, with a strong suspicion that these were not the only ones. (a suspicion that have since been confirmed). We have worked hard for nearly a year now to try and spread the information amongst ISPs, manufacturers and suppliers. And even while some have been graciously working with us, we could tell that it would have taken us several years to get the information out.
-            </p>
-            <p class="mat-body-2"> 
-              At this rate it would eventually leak out of our hands and into organizations with time and resources to take advantage of the vulnerability. This is not fair for the users and would help expand, on scale, the ever growing problems with cyber security companies and people face every day.
-            </p>
-            <p class="mat-body-2">
-              Without a way of unifying the issue across vendors, the chances of it being fixed universally were very slim.
+              The vulnerability was found across 4 different vendors, with a strong suspicion that these were not the
+              only ones. (a suspicion that have since been confirmed). We have worked hard for nearly a year now to try
+              and spread the information amongst ISPs, manufacturers and suppliers. And even while some have been
+              graciously working with us, we could tell that it would have taken us several years to get the information
+              out.
             </p>
             <p class="mat-body-2">
-              We are a small unknown crew with no reputation, and could therefore not establish connection with any manufacturers directly, even though we tried. With no avenue for significantly spreading the message, and having no followers, pitching a multistage exploit to major international providers and manufacturers, would not have been noticed by all the right people in time. 
+              At this rate it would eventually leak out of our hands and into organizations with time and resources to
+              take advantage of the vulnerability. This is not fair for the users and would help expand, on scale, the
+              ever growing problems with cyber security companies and people face every day.
             </p>
             <p class="mat-body-2">
-              Due to the origin of the vulnerability, we did not have the option of going to the owner of the code, and let them deploy a patch from a central source. In which case, this website would not exist. 
+              Without a way of unifying the issue across vendors, the chances of it being fixed universally were very
+              slim.
             </p>
             <p class="mat-body-2">
-              From our perspective, our only choice was to go big and branded to try to reach the affected end-users and let awareness bubble up from there. With this we run the risk of being seen as fearmongering upstarts who tries to sensationalize a buffer overflow in modems which some people would say is almost expected to be vulnerable. But this universal acceptance of modems and routers being insecure was not something we wanted to add to.
+              We are a small unknown crew with no reputation, and could therefore not establish connection with any
+              manufacturers directly, even though we tried. With no avenue for significantly spreading the message, and
+              having no followers, pitching a multistage exploit to major international providers and manufacturers,
+              would not have been noticed by all the right people in time.
+            </p>
+            <p class="mat-body-2">
+              Due to the origin of the vulnerability, we did not have the option of going to the owner of the code, and
+              let them deploy a patch from a central source. In which case, this website would not exist.
+            </p>
+            <p class="mat-body-2">
+              From our perspective, our only choice was to go big and branded to try to reach the affected end-users and
+              let awareness bubble up from there. With this we run the risk of being seen as fearmongering upstarts who
+              tries to sensationalize a buffer overflow in modems which some people would say is almost expected to be
+              vulnerable. But this universal acceptance of modems and routers being insecure was not something we wanted
+              to add to.
             </p>
           </mat-expansion-panel>
           <mat-expansion-panel [(expanded)]="expanded[9]">
